aws-sam/stacks/stack-nested-vpc.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Metadata": {
    "LICENSE": "MIT-0"
  },
  "Description": "VPC with VPC Endpoints and Elastic IP address for Lambda functions",
  "Parameters": {
    "projectName": {
      "Type": "String"
    },
    "env": {
      "Type": "String"
    }
  },
  "Mappings": {
    "VPCIpSpace": {
      "us-east-1": {
        "RANGE": "10.42"
      },
      "us-east-2": {
        "RANGE": "10.43"
      },
      "us-west-1": {
        "RANGE": "10.44"
      },
      "us-west-2": {
        "RANGE": "10.45"
      },
      "ap-south-1": {
        "RANGE": "10.46"
      },
      "ap-northeast-1": {
        "RANGE": "10.47"
      },
      "ap-northeast-2": {
        "RANGE": "10.48"
      },
      "ap-southeast-1": {
        "RANGE": "10.49"
      },
      "ap-southeast-2": {
        "RANGE": "10.50"
      }
    },
    "SubnetTypeIpRanges": {
      "public": {
        "RANGE": "0.0/17"
      },
      "private": {
        "RANGE": "128.0/17"
      }
    },
    "publicSubnetConfig": {
      "publicSubnet01": {
        "CIDR": "10.0/24"
      },
      "publicSubnet02": {
        "CIDR": "11.0/24"
      }
    },
    "privateSubnetConfig": {
      "privateSubnet01": {
        "CIDR": "224.0/24"
      },
      "privateSubnet02": {
        "CIDR": "225.0/24"
      }
    }
  },
  "Resources": {
    "MyVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::FindInMap": [
                  "VPCIpSpace",
                  {
                    "Ref": "AWS::Region"
                  },
                  "RANGE"
                ]
              },
              ".",
              "0.0/16"
            ]
          ]
        },
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "Environment",
            "Value": {
              "Ref": "env"
            }
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${projectName}-${env}-VPC"
            }
          }
        ]
      }
    },
    "publicSubnet01": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPC"
        },
        "CidrBlock": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::FindInMap": [
                  "VPCIpSpace",
                  {
                    "Ref": "AWS::Region"
                  },
                  "RANGE"
                ]
              },
              ".",
              {
                "Fn::FindInMap": [
                  "publicSubnetConfig",
                  "publicSubnet01",
                  "CIDR"
                ]
              }
            ]
          ]
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "0",
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": {
              "Ref": "env"
            }
          },
          {
            "Key": "SubnetType",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${projectName}-${env}-publicSubnet01"
            }
          }
        ]
      }
    },
    "publicSubnet02": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPC"
        },
        "CidrBlock": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::FindInMap": [
                  "VPCIpSpace",
                  {
                    "Ref": "AWS::Region"
                  },
                  "RANGE"
                ]
              },
              ".",
              {
                "Fn::FindInMap": [
                  "publicSubnetConfig",
                  "publicSubnet02",
                  "CIDR"
                ]
              }
            ]
          ]
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "1",
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": {
              "Ref": "env"
            }
          },
          {
            "Key": "SubnetType",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${projectName}-${env}-publicSubnet02"
            }
          }
        ]
      }
    },
    "privateSubnet01": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPC"
        },
        "CidrBlock": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::FindInMap": [
                  "VPCIpSpace",
                  {
                    "Ref": "AWS::Region"
                  },
                  "RANGE"
                ]
              },
              ".",
              {
                "Fn::FindInMap": [
                  "privateSubnetConfig",
                  "privateSubnet01",
                  "CIDR"
                ]
              }
            ]
          ]
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "0",
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": {
              "Ref": "env"
            }
          },
          {
            "Key": "SubnetType",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${projectName}-${env}-privateSubnet01"
            }
          }
        ]
      }
    },
    "privateSubnet02": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPC"
        },
        "CidrBlock": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::FindInMap": [
                  "VPCIpSpace",
                  {
                    "Ref": "AWS::Region"
                  },
                  "RANGE"
                ]
              },
              ".",
              {
                "Fn::FindInMap": [
                  "privateSubnetConfig",
                  "privateSubnet02",
                  "CIDR"
                ]
              }
            ]
          ]
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "1",
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": {
              "Ref": "env"
            }
          },
          {
            "Key": "SubnetType",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${projectName}-${env}-privateSubnet02"
            }
          }
        ]
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Environment",
            "Value": {
              "Ref": "env"
            }
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${projectName}-${env}-IGW"
            }
          }
        ]
      }
    },
    "AttachGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPC"
        },
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPC"
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": {
              "Ref": "env"
            }
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${projectName}-${env}-PublicRouteTable"
            }
          }
        ]
      }
    },
    "PrivateRouteTable1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPC"
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": {
              "Ref": "env"
            }
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${projectName}-${env}-PrivateRouteTable1"
            }
          }
        ]
      }
    },
    "PrivateRouteTable2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPC"
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": {
              "Ref": "env"
            }
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${projectName}-${env}-PrivateRouteTable2"
            }
          }
        ]
      }
    },
    "PublicRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGateway"
        }
      }
    },
    "PrivateRoute01": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable1"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "PublicNatGateway01"
        }
      }
    },
    "PrivateRoute02": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable2"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "PublicNatGateway02"
        }
      }
    },
    "PublicSubnetRTAssociation01": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "publicSubnet01"
        },
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        }
      }
    },
    "PublicSubnetRTAssociation02": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "publicSubnet02"
        },
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        }
      }
    },
    "PrivateSubnetRTAssociation01": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "privateSubnet01"
        },
        "RouteTableId": {
          "Ref": "PrivateRouteTable1"
        }
      }
    },
    "PrivateSubnetRTAssociation02": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "privateSubnet02"
        },
        "RouteTableId": {
          "Ref": "PrivateRouteTable2"
        }
      }
    },
    "PublicNetworkAcl": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPC"
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": {
              "Ref": "env"
            }
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${projectName}-${env}-PublicNetworkAcl"
            }
          }
        ]
      }
    },
    "InboundPublicNAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PublicNetworkAcl"
        },
        "RuleNumber": "2000",
        "Protocol": "-1",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": "0.0.0.0/0",
        "PortRange": {
          "From": "0",
          "To": "65535"
        }
      }
    },
    "OutboundPublicNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PublicNetworkAcl"
        },
        "RuleNumber": "2000",
        "Protocol": "-1",
        "RuleAction": "allow",
        "Egress": "true",
        "CidrBlock": "0.0.0.0/0",
        "PortRange": {
          "From": "0",
          "To": "65535"
        }
      }
    },
    "publicSubnetNetworkAclAssociation01": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "publicSubnet01"
        },
        "NetworkAclId": {
          "Ref": "PublicNetworkAcl"
        }
      }
    },
    "publicSubnetNetworkAclAssociation02": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "publicSubnet02"
        },
        "NetworkAclId": {
          "Ref": "PublicNetworkAcl"
        }
      }
    },
    "privateSubnetNetworkAclAssociation01": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "privateSubnet01"
        },
        "NetworkAclId": {
          "Ref": "PublicNetworkAcl"
        }
      }
    },
    "privateSubnetNetworkAclAssociation02": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "privateSubnet02"
        },
        "NetworkAclId": {
          "Ref": "PublicNetworkAcl"
        }
      }
    },
    "EndpointSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "MyVPC"
        },
        "GroupDescription": "SG for API Gateway Private endpoint",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443",
            "CidrIp": {
              "Fn::Join": [
                "",
                [
                  {
                    "Fn::FindInMap": [
                      "VPCIpSpace",
                      {
                        "Ref": "AWS::Region"
                      },
                      "RANGE"
                    ]
                  },
                  ".",
                  "0.0/16"
                ]
              ]
            }
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "0",
            "ToPort": "65535",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "Tags": [
          {
            "Key": "Environment",
            "Value": {
              "Ref": "env"
            }
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${projectName}-${env}-EndpointSG"
            }
          }
        ]
      }
    },
    "ElasticIP01": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Environment",
            "Value": {
              "Ref": "env"
            }
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${projectName}-${env}-ElasticIP01"
            }
          }
        ]
      }
    },
    "ElasticIP02": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Environment",
            "Value": {
              "Ref": "env"
            }
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${projectName}-${env}-ElasticIP02"
            }
          }
        ]
      }
    },
    "PublicNatGateway01": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "ElasticIP01",
            "AllocationId"
          ]
        },
        "ConnectivityType": "public",
        "SubnetId": {
          "Ref": "publicSubnet01"
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": {
              "Ref": "env"
            }
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${projectName}-${env}-PublicNatGateway01"
            }
          }
        ]
      }
    },
    "PublicNatGateway02": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "ElasticIP02",
            "AllocationId"
          ]
        },
        "ConnectivityType": "public",
        "SubnetId": {
          "Ref": "publicSubnet02"
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": {
              "Ref": "env"
            }
          },
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${projectName}-${env}-PublicNatGateway02"
            }
          }
        ]
      }
    },
    "DDBGatewayEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "RouteTableIds": [
          {
            "Ref": "PublicRouteTable"
          },
          {
            "Ref": "PrivateRouteTable1"
          },
          {
            "Ref": "PrivateRouteTable2"
          }
        ],
        "ServiceName": {
          "Fn::Sub": "com.amazonaws.${AWS::Region}.dynamodb"
        },
        "VpcEndpointType": "Gateway",
        "VpcId": {
          "Ref": "MyVPC"
        }
      }
    },
    "S3GatewayEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "RouteTableIds": [
          {
            "Ref": "PublicRouteTable"
          },
          {
            "Ref": "PrivateRouteTable1"
          },
          {
            "Ref": "PrivateRouteTable2"
          }
        ],
        "ServiceName": {
          "Fn::Sub": "com.amazonaws.${AWS::Region}.s3"
        },
        "VpcEndpointType": "Gateway",
        "VpcId": {
          "Ref": "MyVPC"
        }
      }
    },
    "LogsPrivateEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Ref": "EndpointSG"
          }
        ],
        "ServiceName": {
          "Fn::Sub": "com.amazonaws.${AWS::Region}.logs"
        },
        "SubnetIds": [
          {
            "Ref": "privateSubnet01"
          },
          {
            "Ref": "privateSubnet02"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "MyVPC"
        }
      }
    },
    "SSMPrivateEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Ref": "EndpointSG"
          }
        ],
        "ServiceName": {
          "Fn::Sub": "com.amazonaws.${AWS::Region}.ssm"
        },
        "SubnetIds": [
          {
            "Ref": "privateSubnet01"
          },
          {
            "Ref": "privateSubnet02"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "MyVPC"
        }
      }
    },
    "APIGWPrivateEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Ref": "EndpointSG"
          }
        ],
        "ServiceName": {
          "Fn::Sub": "com.amazonaws.${AWS::Region}.execute-api"
        },
        "SubnetIds": [
          {
            "Ref": "privateSubnet01"
          },
          {
            "Ref": "privateSubnet02"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "MyVPC"
        }
      }
    },
    "LambdaPrivateEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Ref": "EndpointSG"
          }
        ],
        "ServiceName": {
          "Fn::Sub": "com.amazonaws.${AWS::Region}.lambda"
        },
        "SubnetIds": [
          {
            "Ref": "privateSubnet01"
          },
          {
            "Ref": "privateSubnet02"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "MyVPC"
        }
      }
    },
    "ssmParamVpcId": {
      "Type" : "AWS::SSM::Parameter",
      "Properties" : {
        "Description" : {
          "Fn::Sub": "The VPC ID for the ${projectName} ${env} environment."
        },
        "Name" : {
          "Fn::Sub": "/${env}/${projectName}/Resources/VPC"
        },
        "Type" : "String",
        "Value" : {
          "Ref": "MyVPC"
        }
      }
    },
    "ssmParamPublicSubnet1": {
      "Type" : "AWS::SSM::Parameter",
      "Properties" : {
        "Description" : {
          "Fn::Sub": "The VPC PublicSubnet1 for the ${projectName} ${env} environment."
        },
        "Name" : {
          "Fn::Sub": "/${env}/${projectName}/Resources/PublicSubnet1"
        },
        "Type" : "String",
        "Value" : {
          "Ref": "publicSubnet01"
        }
      }
    },
    "ssmParamPublicSubnet2": {
      "Type" : "AWS::SSM::Parameter",
      "Properties" : {
        "Description" : {
          "Fn::Sub": "The VPC PublicSubnet2 for the ${projectName} ${env} environment."
        },
        "Name" : {
          "Fn::Sub": "/${env}/${projectName}/Resources/PublicSubnet2"
        },
        "Type" : "String",
        "Value" : {
          "Ref": "publicSubnet02"
        }
      }
    },
    "ssmParamPrivateSubnet1": {
      "Type" : "AWS::SSM::Parameter",
      "Properties" : {
        "Description" : {
          "Fn::Sub": "The VPC PrivateSubnet1 for the ${projectName} ${env} environment."
        },
        "Name" : {
          "Fn::Sub": "/${env}/${projectName}/Resources/PrivateSubnet1"
        },
        "Type" : "String",
        "Value" : {
          "Ref": "privateSubnet01"
        }
      }
    },
    "ssmParamPrivateSubnet2": {
      "Type" : "AWS::SSM::Parameter",
      "Properties" : {
        "Description" : {
          "Fn::Sub": "The VPC PrivateSubnet2 for the ${projectName} ${env} environment."
        },
        "Name" : {
          "Fn::Sub": "/${env}/${projectName}/Resources/PrivateSubnet2"
        },
        "Type" : "String",
        "Value" : {
          "Ref": "privateSubnet02"
        }
      }
    },
    "ssmParamPrivateSubnetSG": {
      "Type" : "AWS::SSM::Parameter",
      "Properties" : {
        "Description" : {
          "Fn::Sub": "The security group for the private subnet of the VPC for the ${projectName} ${env} environment."
        },
        "Name" : {
          "Fn::Sub": "/${env}/${projectName}/Resources/VpcEndpointSecurityGroup"
        },
        "Type" : "String",
        "Value" : {
          "Ref": "EndpointSG"
        }
      }
    },
    "ssmParamPrivateSubnetSG": {
      "Type" : "AWS::SSM::Parameter",
      "Properties" : {
        "Description" : {
          "Fn::Sub": "The security group for the private subnet of the VPC for the ${projectName} ${env} environment."
        },
        "Name" : {
          "Fn::Sub": "/${env}/${projectName}/Resources/VpcEndpointSecurityGroup"
        },
        "Type" : "String",
        "Value" : {
          "Ref": "EndpointSG"
        }
      }
    },
    "ssmParamElasticIP01": {
      "Type" : "AWS::SSM::Parameter",
      "Properties" : {
        "Description" : {
          "Fn::Sub": "The Elastic IP for the Public NAT Gateway 1 for the VPC of ${projectName} ${env} environment."
        },
        "Name" : {
          "Fn::Sub": "/${env}/${projectName}/Resources/ElasticIP01"
        },
        "Type" : "String",
        "Value" : {
          "Ref": "ElasticIP01"
        }
      }
    },
    "ssmParamElasticIP02": {
      "Type" : "AWS::SSM::Parameter",
      "Properties" : {
        "Description" : {
          "Fn::Sub": "The Elastic IP for the Public NAT Gateway 2 for the VPC of ${projectName} ${env} environment."
        },
        "Name" : {
          "Fn::Sub": "/${env}/${projectName}/Resources/ElasticIP02"
        },
        "Type" : "String",
        "Value" : {
          "Ref": "ElasticIP02"
        }
      }
    }
  },
  "Outputs": {
    "VpcId": {
      "Value": {
        "Ref": "MyVPC"
      },
      "Description": "VPC ID of newly created VPC",
      "Export": {
        "Name": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::Sub": "${projectName}-${env}"
              },
              "-VPC"
            ]
          ]
        }
      }
    },
    "PublicSubnet1": {
      "Value": {
        "Ref": "publicSubnet01"
      },
      "Description": "Public Subnet in AZ 1",
      "Export": {
        "Name": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::Sub": "${projectName}-${env}"
              },
              "-publicSubnet01"
            ]
          ]
        }
      }
    },
    "PublicSubnet2": {
      "Value": {
        "Ref": "publicSubnet02"
      },
      "Description": "Public Subnet in AZ 2",
      "Export": {
        "Name": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::Sub": "${projectName}-${env}"
              },
              "-publicSubnet02"
            ]
          ]
        }
      }
    },
    "PrivateSubnet1": {
      "Value": {
        "Ref": "privateSubnet01"
      },
      "Description": "Private Subnet in AZ 1",
      "Export": {
        "Name": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::Sub": "${projectName}-${env}"
              },
              "-privateSubnet01"
            ]
          ]
        }
      }
    },
    "PrivateSubnet2": {
      "Value": {
        "Ref": "privateSubnet02"
      },
      "Description": "private Subnet in AZ 2",
      "Export": {
        "Name": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::Sub": "${projectName}-${env}"
              },
              "-privateSubnet02"
            ]
          ]
        }
      }
    },
    "EndpointSG": {
      "Value": {
        "Ref": "EndpointSG"
      },
      "Description": "SG for API Gateway Private endpoint",
      "Export": {
        "Name": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::Sub": "${projectName}-${env}"
              },
              "-EndpointSG"
            ]
          ]
        }
      }
    },
    "ElasticIP1": {
      "Value": {
        "Ref": "ElasticIP01"
      },
      "Description": "Elastic IP for Public NAT Gateway 1",
      "Export": {
        "Name": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::Sub": "${projectName}-${env}"
              },
              "-elasticIp01"
            ]
          ]
        }
      }
    },
    "ElasticIP2": {
      "Value": {
        "Ref": "ElasticIP02"
      },
      "Description": "Elastic IP for Public NAT Gateway 2",
      "Export": {
        "Name": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::Sub": "${projectName}-${env}"
              },
              "-elasticIp02"
            ]
          ]
        }
      }
    }
  }
}
